# asimple

./: Doxyfile  LICENSE  README.md  linker.ld  main.c  meson.build  meson_options.txt
include/: spi.h  uart.h
include/asimple/: adc.h  am1815.h  asimple_littlefs.h  bme280.h  bmp280.h  cli.h  flash.h  gpio.h  lora.h  pdm.h  power_control.h  sd_card.h  spi.h  syscalls.h  syscalls_internal.h  systick.h  uart.h
include/rba_simple/: adc.h  gpio.h  lora.h  spi.h  uart.h
src/: adc.c  am1815.c  asimple_littlefs.c  bme280.c  bmp280.c  cli.c  flash.c  gpio.c  lora.c  main.c  pdm.c  power_control.c  sd_card.c  spi.c  syscalls.c  systick.c  uart.c
src/syscalls/: littlefs.c  rtc.c  uart.c
